--- a/frontend/css/detail_edukasi.css
+++ b/frontend/css/detail_edukasi.css
@@ -5,6 +5,18 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+#tempat-ibadah {
+  flex: 1;
+  min-height: 400px;
+}
+
 :root {
   --warna-kuning: #f3cd00;
   --warna-hijau: #31502c;
@@ -19,12 +31,13 @@
   width: 100%;
   height: 4.75rem;
   background-color: var(--warna-hijau);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.575);
   z-index: 10;
 }
 
 .header h3 {
   margin-left: 60px;
-  margin-top: -52px;
+  margin-top: -3rem;
   color: var(--warna-kuning);
   font-weight: 500;
 }
@@ -101,13 +114,11 @@
   position: relative;
   display: inline-block;
 }
-
 /* Dropdown button */
 
 .dropdown-btn {
   cursor: pointer;
 }
-
 /* Dropdown content (disembunyikan secara default) */
 
 .dropdown-content {
@@ -120,7 +131,6 @@
   left: 7px;
   padding-top: 15px;
 }
-
 /* Style untuk link dalam dropdown */
 
 .dropdown-content a {
@@ -129,7 +139,6 @@
   text-decoration: none;
   display: block;
 }
-
 /* Menampilkan dropdown saat di-hover */
 
 .dropdown:hover .dropdown-content {
@@ -141,76 +150,62 @@
   background-color: white;
 }
 
+.banner img {
+  width: 100%;
+}
+
 .banner {
-  padding-top: 60px;
+  margin-top: 1rem;
 }
 
-.text_banner h1 {
-  font-family: "Varela Round", sans-serif;
-  color: var(--warna-kuning);
-}
-
-.text_banner {
-  padding-left: 8.125rem;
-  margin-top: -16rem;
-}
-
-.paragraf {
-  width: 75rem;
-  margin-top: 10rem;
-  padding-left: 8.125rem;
+.konten {
+  padding-left: 10rem;
+  padding-right: 10rem;
   color: #3b3e51;
-  text-align: justify;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
 }
 
-.konten_utama {
-  padding-left: 8.125rem;
-  display: block;
-  margin-bottom: 10rem;
+.judul {
+  padding-left: 9rem;
+  padding-right: 9rem;
+  margin-top: 2rem;
 }
 
-.konten_utama img {
-  margin-top: 10px;
-  margin-left: 20px;
-}
-
-.topik {
-  margin-top: 6rem;
-}
-
-.topik h1 {
+.konten ul {
   color: var(--warna-hijau);
-  font-size: 30px;
-  width: 70rem;
+  font-weight: 600;
+  font-size: 25px;
+  margin-bottom: 2rem;
+  padding-left: 1.5rem;
+  margin-top: 4rem;
 }
 
-.topik p {
-  float: right;
-  width: 45rem;
-  margin-right: 8.125rem;
-  margin-top: 5rem;
+.konten p {
   text-align: justify;
-  color: #3b3e51;
 }
 
-#scrollTopBtn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  display: none;
-  background-color: #51ff0057;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 100%;
-  cursor: pointer;
-  width: 60px;
-  height: 70px;
-  padding-right: 50px;
+.konten ol {
+  padding-left: 1.5rem;
 }
 
-#scrollTopBtn:hover {
-  background-color: var(--warna-hijau);
+.judul ion-icon {
+  font-size: 2.5rem;
+  position: absolute;
+  margin-top: 1rem;
+  opacity: 80%;
+}
+
+.judul h4 {
+  color: var(--warna-hijau);
+  font-size: 1.8rem;
+  margin-top: 1rem;
+}
+
+.judul h3 {
+  font-weight: 300;
+  margin-left: 2.5rem;
+  margin-top: 1.5rem;
 }
 
 footer {
@@ -245,4 +240,24 @@ footer ul {
 
 .footer_kiri h3 {
   font-weight: 600;
+}
+
+#scrollTopBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  background-color: #51ff0057;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 100%;
+  cursor: pointer;
+  width: 60px;
+  height: 70px;
+  padding-right: 50px;
+}
+
+#scrollTopBtn:hover {
+  background-color: var(--warna-hijau);
 }
