--- a/frontend/css/style_ibadah.css
+++ b/frontend/css/style_ibadah.css
@@ -206,6 +206,40 @@ body {
   background-color: var(--warna-hijau);
   color: white;
 }
+.filter button:hover {
+  background-color: var(--warna-hijau);
+  color: white;
+}
+
+.filter_page {
+  position: sticky;
+  top: 0;
+  padding: 10px;
+  display: flex;
+  gap: 20px;
+  margin-left: 9rem;
+}
+
+.filter_page button {
+  padding: 5px 20px;
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  background-color: #e6e6e8;
+  margin-top: 2rem;
+  height: 3rem;
+  width: 3rem;
+}
+
+.filter_page button:focus {
+  background-color: var(--warna-hijau);
+  color: white;
+}
+
+.filter_page button:hover {
+  background-color: var(--warna-hijau);
+  color: white;
+}
 
 .tempat-ibadah-container {
   display: grid;
