--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -147,7 +147,7 @@
   padding-right: 8.125rem;
   padding-top: 70px;
   height: 334px;
-  background-image: url(img/banner.png);
+  background-image: url(../img/banner.png);
   z-index: 1;
   position: relative;
   margin-top: 3rem;
@@ -280,7 +280,7 @@
   height: 300px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/suscatin\ foto.png);
+  background-image: url(../img/suscatin%20foto.png);
   background-repeat: no-repeat;
   box-shadow: 0px 12px 48px #e9e9e9;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -312,7 +312,7 @@
   height: 300px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/tempat\ ibadah.png);
+  background-image: url(../img/tempat%20ibadah.png);
   background-repeat: no-repeat;
   box-shadow: 0px 12px 48px #e9e9e9;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -344,7 +344,7 @@
   height: 300px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/wakaf.png);
+  background-image: url(../img/wakaf.png);
   background-repeat: no-repeat;
   box-shadow: 0px 12px 48px #e9e9e9;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -376,7 +376,7 @@
   height: 300px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/madrasah.png);
+  background-image: url(../img/madrasah.png);
   background-repeat: no-repeat;
   box-shadow: 0px 12px 48px #e9e9e9;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -792,7 +792,7 @@
   height: 298px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/konten_1.svg);
+  background-image: url(../img/konten_1.svg);
   box-shadow: 0px 12px 48px #e9e9e9;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -823,7 +823,7 @@
   height: 298px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/konten\ 2.svg);
+  background-image: url(../img/konten%202.svg);
   box-shadow: 0px 12px 48px #e9e9e9;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -854,7 +854,7 @@
   height: 298px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/konten\ 3.svg);
+  background-image: url(../img/konten%203.svg);
   box-shadow: 0px 12px 48px #e9e9e9;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -885,7 +885,7 @@
   height: 346px;
   border-radius: 20px;
   position: relative;
-  background-image: url(img/konten_1.svg);
+  background-image: url(../img/konten_1.svg);
   box-shadow: 0px 12px 48px #e9e9e9;
 }
 
